# prediction-performance-ci

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_from_csv.py
examples/data/: labels.csv  predictions.csv
src/mabt/: __init__.py  core.py
tests/: test_smoke.py
